--- a/tags.html
+++ b/tags.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Tags
+title: 标签
 header: Posts By Tag
 group: navigation
 ---
@@ -26,10 +26,10 @@ group: navigation
   {% for item in (0..site.tags.size) %}{% unless forloop.last %}
     {% capture this_word %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
     <div class="tab-pane" id="{{ this_word | cgi_escape }}-ref">
-      <h2 style="margin-top: 0px">Posts tagged  with {{ this_word }}</h2>
+      <h2 style="margin-top: 0px">标着<q>{{ this_word }}</q>的文章</h2>
       <ul class="list-unstyled">
         {% for post in site.tags[this_word] %}{% if post.title != null %}
-          <li style="line-height: 35px;"><a href="{{ site.BASE_PATH }}{{post.url}}">{{post.title}}</a> <span class="text-muted">- {{ post.date | date: "%B %d, %Y" }}</span></li>
+          <li style="line-height: 35px;"><a href="{{ site.BASE_PATH }}{{post.url}}">{{post.title}}</a> <span class="text-muted">- {{ post.date | date: "%Y-%m-%d" }}</span></li>
         {% endif %}{% endfor %}
       </ul>
     </div>
