--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ tagline:
   </span>
 
   <h2>
-    <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
+    <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
   </h2>
 
   <div>
@@ -38,9 +38,9 @@ tagline:
   {% if paginator.previous_page %}
   <li class="previous">
     {% if paginator.previous_page == 1 %}
-    <a href="{{ site.BASE_PATH }}/">&larr; 新帖</a>
+    <a href="{{ site.baseurl }}/">&larr; 新帖</a>
     {% else %}
-    <a href="{{ site.BASE_PATH }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">&larr; 新帖</a>
+    <a href="{{ site.baseurl }}/{{ site.paginate_path | replace: ':num', paginator.previous_page }}">&larr; 新帖</a>
     {% endif %}
   </li>
   {% else %}
@@ -55,7 +55,7 @@ tagline:
 
   {% if paginator.next_page %}
   <li class="next">
-    <a href="{{ site.BASE_PATH }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">旧文 &rarr;</a>
+    <a href="{{ site.baseurl }}/{{ site.paginate_path | replace: ':num', paginator.next_page }}">旧文 &rarr;</a>
   </li>
   {% else %}
   <li class="next disabled">
